@@ -1,3 +1,7 @@
+Fri Aug 12 20:51:38 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * fix up autoop plugin a bit
+
 Thu Aug 11 00:13:11 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Added two plugins from Robin Kearney <robin@riviera.org.uk>
